# swag-chess

./: .gitignore  CMakeLists.txt  Chess.sln  README.md  swag_chess_documentation.md
Chess/: AIMove.cpp  Bishop.cpp  Bishop.h  Board.cpp  Board.h  Chess.cpp  Chess.vcxproj  Chess.vcxproj.filters  ChessGUI.cpp  ChessGUI.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Moves.h  Pawn.cpp  Pawn.h  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
Chess/x64/Debug/: Chess.exe.recipe  vc143.idb
Chess/x64/Debug/Chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Chess.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
